se adiciono validacion de duplicados al crear un array de libros