@@ -8,7 +8,6 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/books")
@@ -22,24 +21,19 @@ public class BookController {
 
     @PostMapping
     public ResponseEntity<?> createBook(@RequestBody Object requestBody) {
-        if (requestBody instanceof List<?>) { // Si recibe una lista de libros
+        if (requestBody instanceof List<?>) {
             List<?> rawBooks = (List<?>) requestBody;
             List<Book> books = rawBooks.stream()
-                    .filter(item -> item instanceof Map) // Filtra solo los mapas válidos
+                    .filter(item -> item instanceof Map)
                     .map(item -> {
                         Map<?, ?> bookMap = (Map<?, ?>) item;
-                        return new Book(null, (String) bookMap.get("name")); // null para id (autogenerado)
+                        return new Book(null, (String) bookMap.get("name"));
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
-            List<Book> createdBooks = bookService.createBooks(books);
-            List<Map<String, Long>> response = createdBooks.stream()
-                    .map(book -> Map.of("id", book.getId()))
-                    .collect(Collectors.toList());
-
-            return ResponseEntity.ok(response);
-        } else if (requestBody instanceof Map<?, ?>) { // Si recibe un solo libro
-            Map<?, ?> bookMap = (Map<?, ?>) requestBody;
+            Map<String, Object> result = bookService.createBooks(books);
+            return ResponseEntity.ok(result);
+        } else if (requestBody instanceof Map<?, ?> bookMap) {
             if (bookMap.containsKey("name")) {
                 Book book = new Book(null, (String) bookMap.get("name"));
                 Book createdBook = bookService.createBook(book);
@@ -62,9 +56,9 @@ public class BookController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<Map<String, Long>> updateBook(@PathVariable Long id, @RequestBody Map<String, String> bookMap) {
+    public ResponseEntity<?> updateBook(@PathVariable Long id, @RequestBody Map<String, String> bookMap) {
         if (!bookMap.containsKey("name")) {
-            return ResponseEntity.badRequest().body(Map.of("error", -1L)); // -1 indica error
+            return ResponseEntity.badRequest().body(Map.of("error", "Missing 'name' field"));
         }
         Book book = new Book(id, bookMap.get("name"));
         Book updatedBook = bookService.updateBook(id, book);
